# artifacts/api-server/src/routes/index.ts
@@ -1,12 +1,10 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
-import seasonRouter from "./season";
-import discordRouter from "./discord";
+import monitorRouter from "./monitor";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
-router.use(seasonRouter);
-router.use(discordRouter);
+router.use(monitorRouter);
 
 export default router;
